OpenJMLTest/test/twoFilesF/expected
test/twoFilesF/A.java:3: error: cannot find symbol
public class A { B c;  }
                 ^
  symbol:   class B
  location: class A
test/twoFilesF/q/B.jml:2: error: This JML field declaration conflicts with an existing field with the same name: k (owner: q.B)
public class B { /*@ model int k;*/ }
                               ^
test/twoFilesF/q/B.java:2: error: Associated declaration: test/twoFilesF/q/B.jml:2:
public class B { int k ;  }
                     ^
Operation not performed because of parse or type errors
3 errors
